--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,18 @@
-This repository will be filled with the ChIPS dataset.
+# ChIPS Dataset - Online Appendix
+
+This is the online appendix of the submitted paper "In Search of Dark Patterns in Chatbots" for CONVERSATIONS 2023
+
+
+
+## Tools
+
+We built the ChIPS dataset of chatbot interactions from several web sources and coded them according to already established Dark Patterns from graphical user interfaces, Usability Smells, possible new Dark Patterns, neither and a label for samples that can not be determined. The complete list of samples, code labels and their coding can be seen [here][tablecomplete], a view of only the coded labels is available [here][tablerelevant].
+
+Additionally available are the [list of code labels][codelabels] with their explanations, the [inclusion and exclusion criteria][inclusionexclusion], and the [complete list of found samples][completesample] without filtering according to these criteria.
+
+
+[tablecomplete]: https://github.com/vertr/ChIPS-dataset/blob/main/ChIPS-coding-table.csv
+[tablerelevant]: https://github.com/vertr/ChIPS-dataset/blob/main/ChIPS-relevant-labels.csv
+[codelabels]: https://github.com/vertr/ChIPS-dataset/blob/main/list-codeLabels.md
+[inclusionexclusion]: https://github.com/vertr/ChIPS-dataset/blob/main/ChIPS-InclusionExclusion.md
+[completesample]: https://github.com/vertr/ChIPS-dataset/blob/main/complete-sample-list.csv
